Revert Xmx settings