@@ -190,7 +190,7 @@ subprojects {
             } else {
                 maxParallelForks = 4
                 forkEvery = 100
-                jvmArgs = ['-server', '-Xmx4048M', '-Xms1024M']
+                jvmArgs = ['-server', '-Xmx2048M', '-XX:MaxPermSize=256m']
             }
             if(System.getProperty("debug.tests")) {
                 jvmArgs '-Xmx2g', '-Xdebug', '-Xnoagent', '-Djava.compiler=NONE',
